k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: user-management-dev-poc
  labels:
    name: user-management-dev-poc
